# advent-of-code-2023

./: README.md  main.py  newday.sh  pyproject.toml
.devcontainer/: Dockerfile
advent/: day1.py  day2.py  day3.py  day4.py  day5.py  day6.py  day7.py  template.py  utils.py  utils_test.py
advent/tests/: day1_test.py  day2_test.py  day3_test.py  day4_test.py  day5_test.py  day6_test.py  day7_test.py  test_base.py  testtemplate.py
advent2023/: day1.py  template.py  utils.py
advent2023/tests/: day1_test.py  testtemplate.py
