[tool.poetry]
name = "advent-2023"
version = "0.1.0"
description = ""
authors = ["Chris Hunt <chris.hunt@hudl.com>"]
readme = "README.md"
packages = [{include = "advent_2022"}]

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^7.2.0"
pytest-watch = "^4.2.0"
numpy = "^1.23.5"
isort = "^5.12.0"
pytest-cov = "^4.1.0"

[tool.pytest.ini_options]
addopts = "--cov --cov-report term-missing"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
